# citebench

./: Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
citebench/: __init__.py  corpus.py  eval.py  pipeline.py  rerank.py  retrieve.py
examples/: quickstart.py
tests/: test_citebench.py
