[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citebench"
version = "0.1.0"
description = "Hybrid retrieval + reranking benchmark for citation-grounded RAG in regulated domains."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ahmed Doghri" }]
keywords = ["rag", "retrieval", "reranking", "llm", "bm25", "citations", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/ahmeddoghri/citebench"

[tool.hatch.build.targets.wheel]
packages = ["citebench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
